--- a/assets/scss/form.scss
+++ b/assets/scss/form.scss
@@ -1,6 +1,6 @@
 .dropdown-content li > a,
 .dropdown-content li > span {
-  color: #4CAF50 !important;
+  color: #4caf50 !important;
   font-size: 16px;
   text-transform: none;
 }
@@ -24,13 +24,13 @@ input[type="tel"]:not(.browser-default):focus:not([readonly]),
 input[type="number"]:not(.browser-default):focus:not([readonly]),
 input[type="search"]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #4CAF50;
-  box-shadow: 0 1px 0 0 #4CAF50;
+  border-bottom: 1px solid #4caf50;
+  box-shadow: 0 1px 0 0 #4caf50;
   & + label {
-    color: #4CAF50;
+    color: #4caf50;
   }
 }
 
 .select-wrapper input.select-dropdown:focus {
-  border-bottom-color: #4CAF50;
+  border-bottom-color: #4caf50;
 }
