--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -11,7 +11,7 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-image: url("../img/header.png");
+  background-image: url("../img/header.jpg");
 
   p {
     padding: 0;
