--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,7 +14,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-image: url("../img/shop.png");
+  background-image: url("../img/shop.jpg");
   padding: 80px 0;
 
   .rank {
