--- a/assets/scss/navbar.scss
+++ b/assets/scss/navbar.scss
@@ -1,6 +1,6 @@
 nav {
   position: fixed;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2) !important;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2) !important;
   line-height: 38px !important;
   background-color: transparent !important;
 
@@ -14,12 +14,12 @@ nav {
     }
     a {
       color: white;
-      transition: background-color .3s;
-      transition: color .3s;
+      transition: background-color 0.3s;
+      transition: color 0.3s;
       &:hover {
         background-color: white;
-        color: #4CAF50;
-        transition: background-color .6s;
+        color: #4caf50;
+        transition: background-color 0.6s;
       }
     }
   }
@@ -47,7 +47,7 @@ nav {
     margin-top: 0;
     transition-duration: 0.5s;
     overflow: hidden;
-    
+
     ul {
       width: 100%;
       text-align: center;
@@ -68,7 +68,7 @@ nav {
       display: none !important;
     }
 
-    &.open{
+    &.open {
       height: 265px;
     }
   }
