--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,15 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap");
 body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+  font-family: "Oswald", sans-serif; }
+
+.onAppear {
+  opacity: 0; }
 
 .vertical-align {
   min-height: 100vh;
   display: flex;
   width: 100%;
-  align-items: center;
-}
+  align-items: center; }
+
+.s-container {
+  width: 85%;
+  margin: 0 auto;
+  max-width: 2000px; }
 
 .noselect {
   -webkit-touch-callout: none;
@@ -17,259 +25,220 @@ body {
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
-}
-
-.loading {
-  background-color: #fff;
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
-  background: url("../img/loader.gif") center no-repeat #fff;
-}
+  user-select: none; }
 
 .overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); }
+
+.alert, #alert {
   display: none;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  height: 100vh;
   width: 100vw;
-  z-index: 2000;
-}
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 99999; }
+  .alert .box, #alert .box {
+    padding: 30px;
+    background-color: white;
+    width: 90%;
+    max-width: 500px;
+    margin: 0 auto; }
+    .alert .box h1, #alert .box h1 {
+      margin: 0; }
+    .alert .box p, #alert .box p {
+      font-size: 20px; }
+    .alert .box button, #alert .box button {
+      cursor: pointer;
+      color: white;
+      font-size: 18px;
+      font-weight: 700;
+      text-transform: uppercase;
+      border: none;
+      background-color: #4caf50;
+      padding: 10px 30px;
+      border-radius: 50px;
+      transition: background-color 0.5s; }
+      .alert .box button:hover, #alert .box button:hover {
+        transition: background-color 0.5s;
+        background-color: #3e9340; }
 
 nav {
-  position: fixed;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2) !important;
+  position: absolute;
+  box-shadow: none !important;
   line-height: 38px !important;
   background-color: transparent !important;
-}
-nav a {
-  color: white;
-}
-nav ul {
-  margin: 12.5px 0;
-}
-nav ul li {
-  margin: 0 6px;
-}
-nav ul a {
-  color: white;
-  transition: background-color 0.3s;
-  transition: color 0.3s;
-}
-nav ul a:hover {
-  background-color: white;
-  color: #4caf50;
-  transition: background-color 0.6s;
-}
-nav img {
-  padding: 15px 0;
-}
+  z-index: 9999999; }
+  nav a {
+    color: white; }
+  nav ul {
+    margin: 12.5px 0; }
+    nav ul li {
+      margin: 0 6px; }
+    nav ul a {
+      font-size: 22px;
+      color: white;
+      text-transform: uppercase; }
+      nav ul a::after {
+        transition: 0.5s;
+        content: '';
+        display: block;
+        height: 2px;
+        width: 0;
+        margin-left: 50%;
+        background-color: transparent; }
+      nav ul a:hover {
+        background: none; }
+        nav ul a:hover::after {
+          transition: 0.5s;
+          margin-left: 0;
+          width: 100%;
+          background-color: white; }
+  nav img {
+    padding: 4px 0; }
+
+.brand-logo {
+  transition: transform 0.8s ease-in-out; }
+  .brand-logo:hover {
+    transform: rotate(360deg); }
 
 .navToggle {
   position: absolute;
+  cursor: pointer;
+  top: 0px;
   left: 25px;
-  display: none;
-}
+  display: none; }
 
 .nav-wrapper {
-  padding: 0 30px;
-}
+  padding: 40px 0; }
 
 @media (max-width: 992px) {
+  .brand-logo {
+    display: none !important; }
   .navToggle {
-    display: block;
-  }
+    display: block; }
   nav {
     margin-top: 0;
     transition-duration: 0.5s;
     overflow: hidden;
-  }
-  nav ul {
-    width: 100%;
-    text-align: center;
-    padding-top: 50px;
-  }
-  nav ul.right {
-    float: left !important;
-  }
-  nav ul li {
-    float: none;
-  }
-  nav ul li button {
-    margin: 6px 0;
-  }
-  nav a::after {
-    display: none !important;
-  }
-  nav.open {
-    height: 265px;
-  }
-}
+    background: rgba(0, 0, 0, 0.5) !important; }
+    nav ul {
+      width: 100%;
+      text-align: center;
+      margin-top: 50px; }
+      nav ul.right {
+        float: left !important; }
+      nav ul li {
+        float: none; }
+        nav ul li button {
+          margin: 6px 0; }
+    nav a::after {
+      display: none !important; }
+    nav.open {
+      height: 320px; } }
 
 .logout {
   margin-top: 10px;
-  font-size: 16px;
-}
-.logout:hover {
-  background-color: transparent !important;
-  border: 1px solid white;
-}
-
-@media (max-width: 592px) {
-  nav img {
-    padding-bottom: 24px;
-  }
-}
+  font-size: 16px; }
+  .logout:hover {
+    background-color: transparent !important;
+    border: 1px solid white; }
 
 header {
-  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
-    0px 18px 23px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
+  overflow: hidden;
   color: white;
   font-weight: bold;
-  height: 450px;
+  height: 800px;
+  letter-spacing: 5px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-image: url("../img/header.jpg");
-}
-header .vertical-align {
-  min-height: 450px;
-}
-header p {
-  padding: 0;
-  font-size: 22px;
-}
-header span {
-  display: inline-block;
-  font-weight: 600;
-  padding: 0px 15px;
-  border: 10px solid white;
-  letter-spacing: 10px;
-  padding-bottom: 8px;
-  font-size: 70px;
-}
+  background-image: url("../img/header.png"); }
+  header .vertical-align {
+    min-height: 800px; }
+  header h1 {
+    margin-top: 5px;
+    margin-bottom: 30px;
+    font-size: 80px;
+    text-transform: uppercase; }
+  header span {
+    font-weight: 300;
+    font-size: 40px;
+    text-transform: uppercase; }
+  header p {
+    font-weight: 300;
+    font-size: 25px; }
+  header .online {
+    cursor: pointer;
+    margin-top: 40px;
+    display: inline-block;
+    padding: 20px 30px;
+    background-color: #4caf50;
+    color: white;
+    border-radius: 50px;
+    transition: background-color 0.5s; }
+    header .online:hover {
+      transition: background-color 0.5s;
+      background-color: #3e9340; }
+    header .online span {
+      display: inline-block;
+      letter-spacing: 2px;
+      font-size: 25px; }
+    header .online .material-icons {
+      position: absolute;
+      font-size: 40px;
+      margin-right: 20px; }
+    header .online .text {
+      margin-left: 60px;
+      margin-right: 12px;
+      font-weight: 400;
+      text-transform: uppercase; }
+    header .online .slots {
+      font-weight: 300; }
+  header img {
+    width: auto;
+    height: 450px; }
+
+@media (max-width: 1386px) {
+  header .skinrender {
+    display: none; } }
 
 @media (max-width: 992px) {
   header span {
-    font-size: 30px;
-    border: 5px solid white;
-  }
+    font-size: 30px; }
+  header h1 {
+    font-size: 70px; } }
+
+@media (max-width: 475px) {
+  header span {
+    font-size: 25px; }
+  header h1 {
+    font-size: 45px; }
   header p {
-    font-size: 18px;
-  }
-}
-
-#about {
-  padding: 80px 0;
-}
-#about h3 {
-  color: #4caf50;
-  margin-top: 0;
-  margin-bottom: 100px;
-  font-weight: bold;
-  letter-spacing: 2px;
-}
-
-#shop {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-image: url("../img/shop.jpg");
-  padding: 80px 0;
-}
-#shop .rank {
-  margin: 10px 0;
-  background-color: white;
-}
-#shop .rank .header {
-  padding: 10px 0;
-  background-color: #4caf50;
-}
-#shop .rank .header span {
-  cursor: default;
-  color: white;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 25px;
-}
-#shop .rank .footer {
-  padding: 20px 0;
-}
-#shop .rank .footer .btn {
-  padding: 0px 40px;
-}
-#shop .rank td {
-  cursor: default;
-}
-
-#imprint {
-  padding: 80px 0;
-}
-
-.info-card {
-  padding: 0 20px;
-}
-.info-card h5 {
-  color: #4caf50;
-  margin: 5px 0;
-}
-.info-card i {
-  font-size: 70px;
-}
-.info-card p {
-  color: #414141;
-}
-
-footer a {
-  color: white;
-}
-
-.contact {
-  margin-top: 20px;
-}
-.contact a {
-  transition: background-color 0.5s;
-  background-color: white;
-  padding: 7px 10px;
-  padding-top: 8px;
-  border-radius: 50%;
-}
-.contact a:hover {
-  transition: background-color 0.5s;
-  background-color: rgba(255, 255, 255, 0.8);
-}
-.contact .col {
-  margin: 5px 0;
-  padding: 0 4px;
-}
-
-@media (max-width: 600px) {
-  .footer-col {
-    text-align: center !important;
-  }
-}
+    font-size: 20px; }
+  header .online .text {
+    margin-left: 38px; }
+  header .online span {
+    font-size: 20px; }
+  header .online .material-icons {
+    font-size: 28px; } }
 
 .dropdown-content li > a,
 .dropdown-content li > span {
-  color: #4caf50 !important;
+  color: #4CAF50 !important;
   font-size: 16px;
-  text-transform: none;
-}
+  text-transform: none; }
 
 .select-dropdown li.disabled,
 .select-dropdown li.disabled > span,
 .select-dropdown li.optgroup {
-  color: rgba(0, 0, 0, 0.3) !important;
-}
+  color: rgba(0, 0, 0, 0.3) !important; }
+
+.input-field .prefix.active {
+  color: #4CAF50; }
 
 input:not([type]):focus:not([readonly]),
 input[type="text"]:not(.browser-default):focus:not([readonly]),
@@ -284,26 +253,212 @@ input[type="tel"]:not(.browser-default):focus:not([readonly]),
 input[type="number"]:not(.browser-default):focus:not([readonly]),
 input[type="search"]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #4caf50;
-  box-shadow: 0 1px 0 0 #4caf50;
-}
-input:not([type]):focus:not([readonly]) + label,
-input[type="text"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="password"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="email"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="url"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="time"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="date"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="datetime"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="datetime-local"]:not(.browser-default):focus:not([readonly])
-  + label,
-input[type="tel"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="number"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="search"]:not(.browser-default):focus:not([readonly]) + label,
-textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #4caf50;
-}
+  border-bottom: 1px solid #4CAF50;
+  box-shadow: 0 1px 0 0 #4CAF50; }
+  input:not([type]):focus:not([readonly]) + label,
+  input[type="text"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="password"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="email"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="url"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="time"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="date"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="datetime"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="datetime-local"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="tel"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="number"]:not(.browser-default):focus:not([readonly]) + label,
+  input[type="search"]:not(.browser-default):focus:not([readonly]) + label,
+  textarea.materialize-textarea:focus:not([readonly]) + label {
+    color: #4CAF50; }
 
 .select-wrapper input.select-dropdown:focus {
-  border-bottom-color: #4caf50;
-}
+  border-bottom-color: #4CAF50; }
+
+.btn, .btn-large, .btn-small {
+  background-color: #4CAF50 !important; }
+
+.text-banner {
+  margin-bottom: 200px;
+  height: 60px;
+  width: 100%;
+  background-color: #4caf50; }
+  .text-banner .inner {
+    text-align: center;
+    height: 100%;
+    width: 400px;
+    margin: 0 auto;
+    background-color: white; }
+    .text-banner .inner span {
+      letter-spacing: 3px;
+      display: block;
+      text-transform: uppercase; }
+    .text-banner .inner .title {
+      line-height: 24px;
+      font-weight: 700;
+      font-size: 30px;
+      color: #3e3e3e; }
+    .text-banner .inner .subtitle {
+      margin-top: 12px;
+      font-size: 17px;
+      color: #878484; }
+
+#toast {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 999999;
+  margin: 0 auto; }
+  #toast img {
+    position: absolute;
+    height: auto;
+    width: 40vw;
+    margin: 0 auto;
+    left: calc(100vw / 2 - 20vw); }
+
+#about {
+  overflow: hidden;
+  margin-top: 200px; }
+
+.game {
+  position: relative; }
+  .game .title {
+    text-transform: uppercase;
+    color: #4caf50;
+    font-size: 45px;
+    letter-spacing: 2px; }
+  .game .preview {
+    width: 100%;
+    height: auto; }
+  .game .icon {
+    top: 20px;
+    right: -20px;
+    position: absolute;
+    text-align: right;
+    display: inline-block;
+    background-color: #4caf50;
+    border-radius: 50%;
+    padding: 20px; }
+    .game .icon img {
+      width: 80px;
+      height: 80px; }
+  .game p {
+    position: relative;
+    width: 100%;
+    height: 250px;
+    right: -30px;
+    font-size: 20px;
+    color: #3e3e3e; }
+
+#shop {
+  overflow: hidden;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/shop.png"); }
+  #shop .s-container {
+    padding: 40px 0; }
+  #shop h1,
+  #shop h4 {
+    color: white;
+    letter-spacing: 2px;
+    text-transform: uppercase; }
+  #shop h4 {
+    font-weight: 300; }
+
+.rank {
+  margin: 40px 20px;
+  letter-spacing: 2px; }
+  .rank .header {
+    position: relative;
+    text-transform: uppercase;
+    background-color: #4caf50;
+    color: white;
+    padding: 20px 30px;
+    width: 100%; }
+  .rank .name {
+    text-transform: uppercase;
+    font-size: 50px;
+    line-height: 50px; }
+  .rank .price {
+    position: absolute;
+    font-size: 30px;
+    top: 15px;
+    right: 15px; }
+  .rank ul {
+    margin: 0;
+    text-align: center;
+    width: 100%; }
+  .rank li {
+    background-color: white;
+    color: #3e3e3e;
+    padding: 10px;
+    font-size: 20px;
+    margin-bottom: 5px; }
+    .rank li:last-child {
+      margin-bottom: 0; }
+  .rank button {
+    cursor: pointer;
+    outline: none;
+    border: none;
+    background-color: #4caf50;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    color: white;
+    font-weight: 700;
+    font-size: 30px;
+    padding: 15px;
+    transition: background-color 0.5s; }
+    .rank button:hover {
+      transition: background-color 0.5s;
+      background-color: #3e9340; }
+
+#apply {
+  margin-top: 200px; }
+
+#appeal,
+#rules {
+  margin: 200px 0; }
+
+@media (max-width: 475px) {
+  .game p {
+    right: 0; }
+  .game .icon img {
+    width: 60px;
+    height: 60px; }
+  .text-banner .inner {
+    width: 100%; }
+    .text-banner .inner .title {
+      font-size: 25px; }
+    .text-banner .inner .subtitle {
+      font-size: 12px; }
+  .rank .price {
+    font-size: 22px; }
+  .rank .name {
+    font-size: 40px; }
+  .rank li {
+    font-size: 14px; } }
+
+footer a {
+  color: white; }
+
+.contact {
+  margin-top: 20px; }
+  .contact a {
+    transition: background-color 0.5s;
+    background-color: white;
+    padding: 7px 10px;
+    padding-top: 8px;
+    border-radius: 50%; }
+    .contact a:hover {
+      transition: background-color 0.5s;
+      background-color: rgba(255, 255, 255, 0.8); }
+  .contact .col {
+    margin: 5px 0;
+    padding: 0 4px; }
+
+@media (max-width: 600px) {
+  .footer-col {
+    text-align: center !important; } }
