--- a/assets/scss/form.scss
+++ b/assets/scss/form.scss
@@ -1,6 +1,6 @@
 .dropdown-content li > a,
 .dropdown-content li > span {
-  color: #4caf50 !important;
+  color: #4CAF50 !important;
   font-size: 16px;
   text-transform: none;
 }
@@ -9,6 +9,10 @@
 .select-dropdown li.disabled > span,
 .select-dropdown li.optgroup {
   color: rgba(0, 0, 0, 0.3) !important;
+}
+
+.input-field .prefix.active {
+  color: #4CAF50;
 }
 
 input:not([type]):focus:not([readonly]),
@@ -24,13 +28,17 @@ input[type="tel"]:not(.browser-default):focus:not([readonly]),
 input[type="number"]:not(.browser-default):focus:not([readonly]),
 input[type="search"]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #4caf50;
-  box-shadow: 0 1px 0 0 #4caf50;
+  border-bottom: 1px solid #4CAF50;
+  box-shadow: 0 1px 0 0 #4CAF50;
   & + label {
-    color: #4caf50;
+    color: #4CAF50;
   }
 }
 
 .select-wrapper input.select-dropdown:focus {
-  border-bottom-color: #4caf50;
+  border-bottom-color: #4CAF50;
+}
+
+.btn, .btn-large, .btn-small {
+  background-color: #4CAF50 !important;
 }
