--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,31 +1,82 @@
 header {
-  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
+  overflow: hidden;
   color: white;
   font-weight: bold;
-  height: 450px;
-  .vertical-align {
-    min-height: 450px;
-  }
+  height: 800px;
+  letter-spacing: 5px;
+
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-image: url("../img/header.jpg");
+  background-image: url("../img/header.png");
 
-  p {
-    padding: 0;
-    font-size: 22px;
+  .vertical-align {
+    min-height: 800px;
+  }
+
+  h1 {
+    margin-top: 5px;
+    margin-bottom: 30px;
+    font-size: 80px;
+    text-transform: uppercase;
   }
 
   span {
+    font-weight: 300;
+    font-size: 40px;
+    text-transform: uppercase;
+  }
+
+  p {
+    font-weight: 300;
+    font-size: 25px;
+  }
+
+  .online {
+    cursor: pointer;
+    margin-top: 40px;
     display: inline-block;
-    font-weight: 600;
-    padding: 0px 15px;
-    border: 10px solid white;
-    letter-spacing: 10px;
-    padding-bottom: 8px;
-    font-size: 70px;
+    padding: 20px 30px;
+    background-color: #4caf50;
+    color: white;
+    border-radius: 50px;
+    transition: background-color 0.5s;
+    &:hover {
+      transition: background-color 0.5s;
+      background-color: #3e9340;
+    }
+    span {
+      display: inline-block;
+      letter-spacing: 2px;
+      font-size: 25px;
+    }
+    .material-icons {
+      position: absolute;
+      font-size: 40px;
+      margin-right: 20px;
+    }
+    .text {
+      margin-left: 60px;
+      margin-right: 12px;
+      font-weight: 400;
+      text-transform: uppercase;
+    }
+    .slots {
+      font-weight: 300;
+    }
+  }
+
+  img {
+    width: auto;
+    height: 450px;
+  }
+}
+
+@media (max-width: 1386px) {
+  header {
+    .skinrender {
+      display: none;
+    }
   }
 }
 
@@ -33,10 +84,34 @@ header {
   header {
     span {
       font-size: 30px;
-      border: 5px solid white;
+    }
+    h1 {
+      font-size: 70px;
+    }
+  }
+}
+
+@media (max-width: 475px) {
+  header {
+    span {
+      font-size: 25px;
+    }
+    h1 {
+      font-size: 45px;
     }
     p {
-      font-size: 18px;
+      font-size: 20px;
+    }
+    .online {
+      .text {
+        margin-left: 38px;
+      }
+      span {
+        font-size: 20px;
+      }
+      .material-icons {
+        font-size: 28px;
+      }
     }
   }
 }
