🛠 Center items utility

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -14,5 +14,8 @@
     .markdown {
       @apply max-w-full prose prose-invert prose-sm md:prose-base;
     }
+    .center-content {
+      @apply flex items-center justify-center;
+    }
 
 }
