:bug: Remove blue mobile focus outline

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -10,6 +10,9 @@
     code {
         @apply before:hidden after:hidden bg-backgroundColorLight p-1 rounded;
     }
+    *:focus {
+        @apply outline-none;
+    }
 
 }
 @layer utilities {
